deployment/spellbook-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spellbook-deployment
  namespace: team-epimetheus
  labels:
    name: spellbook
spec:
  selector:
    matchLabels:
      app: spellbook
  template:
    metadata:
      labels:
        app: spellbook
    spec:
      containers:
      - name: spellbook-container
        image: cunananan/spellbook:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        volumeMounts:
        - name: logs
          mountPath: /logs
      - name: promtail-container
        image: grafana/promtail
        args:
        - -config.file=/etc/promtail/promtail-config.yml
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        volumeMounts:
        - name: logs
          mountPath: /var/log
        - name: promtail-config
          mountPath: /etc/promtail
      volumes:
      - name: logs
        emptyDir: {}
      - name: promtail-config
        configMap: 
          name: promtail-configmap
