deployment/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: ClusterIP
  selector:
    app: app-service
  ports:
  - port: 8080
    targetPort: 8080
