deployment/loki-service.yml
apiVersion: v1
kind: Service
metadata:
  name: loki-service
  namespace: team-epimetheus
spec:
  type: ExternalName
  externalName: loki.default.svc.cluster.local
  ports:
  - port: 3100
