deployment/spellbook-service.yml
apiVersion: v1
kind: Service
metadata:
  name: spellbook-service
  namespace: team-epimetheus
spec:
  type: ClusterIP
  selector:
    app: spellbook
  ports:
  - port: 8080
    targetPort: 8080
