deployment/spellbook-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spellbook-ingress
  namespace: team-epimetheus
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/user-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/spellbook/(.*)"
        backend:
          service:
            name: spellbook-service
            port: 
              number: 8080
